# nuclex-opusfile

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  config.h  nuclex-opusfile (msvc-14.2).vcxproj  nuclex-opusfile (msvc-14.2).vcxproj.filters
